se agrego el index y se arreglaron algunos direccionamientso de imagenes al igula que el html de error 404

--- a/integrantes/20233tn067.html
+++ b/integrantes/20233tn067.html
@@ -15,7 +15,7 @@
     <p>20233tn067</p>
     <p>Bachillerato</p>
     <p>Mi pasatiempo favorito es escuchar musica y jugarvideojuegos</p>
-    <img src="../img/MEMEJJ.png"   width="400"
+    <img src="../img/MEMEJJ.jpg"   width="400"
     height="341" />
 
     
