--- a/integrantes/20233tn106.html
+++ b/integrantes/20233tn106.html
@@ -17,7 +17,7 @@
     <p>20233tn106</p>
     <p>Medio superior</p>
     <p>Videojeugos</p>
-    <img src="img/aqua_llorando.jpg" />
+    <img src="../img/aqua_llorando.jpg" />
 
 
 
