--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="d-flex justify-content-center ">
-        <img src="/img/logo.png" style="width: 150px ">
+        <img src="img/logo.png" style="width: 150px ">
     </div>
 
     
@@ -65,7 +65,7 @@
               <td>Díaz Barroso Juan José</td>
               <td>20233tn067</td>
               <td>Masculino</td>
-              <td>18</td>
+              <td>19</td>
               <td><a href="/integrantes/20233tn067.html">20233tn067</a></td>
             </tr>
             <tr>
