error de paginas

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <td>20233tn087</td>
               <td>Masculino</td>
               <td>18</td>
-              <td><a href="/integrantes/20233tn087.html">20233tn087</a></td>
+              <td><a href="integrantes/20233tn087.html">20233tn087</a></td>
             </tr>
             <!-- Puedes agregar más filas según necesites -->
             <tr>
@@ -59,35 +59,35 @@
               <td>20233tn106</td>
               <td>Masculino</td>
               <td>19</td>
-              <td><a href="/integrantes/20233tn106.html">20233tn106</a></td>
+              <td><a href="integrantes/20233tn106.html">20233tn106</a></td>
             </tr>
             <tr>
               <td>Díaz Barroso Juan José</td>
               <td>20233tn067</td>
               <td>Masculino</td>
               <td>19</td>
-              <td><a href="/integrantes/20233tn067.html">20233tn067</a></td>
+              <td><a href="integrantes/20233tn067.html">20233tn067</a></td>
             </tr>
             <tr>
                 <td>Sanchez Saldaña José Manuel </td>
                 <td>20233tn078</td>
                 <td>Masculino</td>
                 <td>20</td>
-                <td><a href="/integrantes/20233tn078.html">20233tn078</a></td>
+                <td><a href="integrantes/20233tn078.html">20233tn078</a></td>
               </tr>
               <tr>
                 <td>Ortega Chavarria Angel Ivan</td>
                 <td>20233tn086</td>
                 <td>Masculino</td>
                 <td>18</td>
-                <td><a href="/integrantes/20233tn086.html">20233tn086</a></td>
+                <td><a href="integrantes/20233tn086.html">20233tn086</a></td>
               </tr>
               <tr>
                 <td>Villanueva Miranda Bigvai Jatniel</td>
                 <td>20233tn104</td>
                 <td>Masculino</td>
                 <td>18</td>
-                <td><a href="/integrantes/20233tn104.html">20233tn104</a></td>
+                <td><a href="integrantes/20233tn104.html">20233tn104</a></td>
               </tr>
           </tbody>
         </table>
